Fix background colours to troubleshoot contrast issues

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ img {
 
 header {
   background-image: url("../images/anchors.svg");
+  background-color: #1e7c74;
   color: #fff;
   font-size: 1.125rem;
   font-style: normal;
@@ -149,9 +150,9 @@ figcaption {
   text-align: center;
 }
 
-article footer {
-  background-color: #259f95;
-  background-image: none;
+body > footer {
+  background-image: url("../images/anchors.svg");
+  background-color: #1e7c74;
   border-radius: 6px 6px 0 0;
   color: #fff;
 }
@@ -160,6 +161,6 @@ footer {
   display: flex;
   justify-content: center;
   padding: 1rem;
-  background-image: url("../images/anchors.svg");
+  background-color: #1e7c74;
   color: #fff;
 }
